--- a/demo/index.html
+++ b/demo/index.html
@@ -28,16 +28,7 @@
   <div>
     <input type="file" accept="audio/*" />
   </div>
-  <div class="sliders">
-    <label>
-      <span>Overlap: <span class="overlap">25</span>
-      <input class="overlap" type="range" value="25" min="2" max="50">
-    </label>
-    <label>
-      <span>Frame Size: <span class="frame-size">512</span>
-      <input class="frame-size" type="range" value="1" min="1" max="4" step="1">
-    </label>
-  </div>
+  <div class="sliders"></div>
   <canvas width="1080" height="720"></canvas>
 
   <script type="module" src="index.js"></script>
